--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
             <li><%= link_to "ログイン", new_member_session_path %></li>
             <li><%= link_to "トップ", root_path %></li>
             <li><%= link_to "アバウト", about_path %></li>
+            <li><%= link_to "仮program index", admins_programs_path %></li>
           <% end %>
         </ul>
       </nav>
