--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Admins::Programs#index</h1>
-<p>Find me in app/views/admins/programs/index.html.erb</p>
+<div class="conteiner m-5">
+  <div class="row mt-4">
+    <div class="col-9">
+        <h4 class="text-center">番組一覧</h4>
+        <div class="mt-3">
+          <%= link_to @title, admins_program_path(:id) %>
+          <p><%= @description %></p>
+          <p><%= @date %></p>
+          <p><%= @channel %></p>
+        </div>
+    </div>
+    <div class="col-3">
+        <p>検索フォーム</p>
+        <%= render 'admins/searches/search' %>
+    </div>
+  </div>
+</div>
