--- a/app/views/members/searches/search.html.erb
+++ b/app/views/members/searches/search.html.erb
@@ -1,2 +1,17 @@
-<h1>Members::Searches#search</h1>
-<p>Find me in app/views/members/searches/search.html.erb</p>
+<div class="conteiner m-5">
+  <div class="row mt-4">
+    <div class="col-9">
+        <h4 class="text-center">検索結果</h4>
+        <div class="mt-3">
+          <%= link_to @title, program_path(:id) %>
+          <p><%= @description %></p>
+          <p><%= @date %></p>
+          <p><%= @channel %></p>
+        </div>
+    </div>
+    <div class="col-3">
+        <p>検索フォーム</p>
+        <%= render 'members/searches/search', search: @search %>
+    </div>
+  </div>
+</div>
