--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -3,10 +3,12 @@
     <div class="col-9">
         <h4 class="text-center">番組一覧</h4>
         <div class="mt-3">
-          <%= link_to @title, admins_program_path(:id) %>
-          <p><%= @description %></p>
-          <p><%= @date %></p>
-          <p><%= @channel %></p>
+          <% @programs.each do |program|%>
+          <%= program.title %>
+          <%= program.cast %>
+          <%= program.date %>
+          <%= program.channel %>
+          <% end %>
         </div>
     </div>
     <div class="col-3">
