--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -7,12 +7,8 @@
       <section id="mymenu-box">
         <h2 class="text-center">会員専用マイページ</h2>
         <div class="mymenu-box-list">
-          
-          <%= link_to  anchor: "myfav-program" do %>
-            <div class="mymenu-box-item">
-              <i class="fas fa-tv"></i>お気に入り番組
-            </div>
-          <% end %>
+
+          <%= link_to "お気に入り番組", { anchor: "myfav-program" }, class: "mymenu-box-item" %>
           <%= link_to "お気に入りキャスト", { anchor: "myfav-cast" }, class: "mymenu-box-item" %>
           <%= link_to "口コミ一覧", { anchor: "myreview" }, class: "mymenu-box-item" %>
           <%= link_to "お問い合わせ", { anchor: "mycontact" }, class: "mymenu-box-item" %>
