--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -4,10 +4,10 @@
         <h4 class="text-center">番組一覧</h4>
         <div class="mt-3">
           <% @programs.each do |program|%>
-          <%= program.title %>
-          <%= program.cast %>
-          <%= program.date %>
-          <%= program.channel %>
+          <%= program[:title] %><br>
+          <%= program[:cast] %><br>
+          <%= program[:date] %><br>
+          <%= program[:channel] %>
           <% end %>
         </div>
     </div>
