--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -4,10 +4,11 @@
         <h4 class="text-center">番組一覧</h4>
         <div class="mt-3">
           <% @programs.each do |program|%>
-          <%= program[:title] %><br>
-          <%= program[:cast] %><br>
-          <%= program[:date] %><br>
-          <%= program[:channel] %>
+          <h4>番組情報</h4>
+          <p>番組名：<%= program[:title] %></p><br>
+          <p>出演者情報：<%= program[:cast] %></p><br>
+          <p>放送時間：<%= program[:date] %></p><br>
+          <p>局：<%= program[:channel] %></p><br>
           <% end %>
         </div>
     </div>
