--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -4,11 +4,16 @@
         <h4 class="text-center">番組一覧</h4>
         <div class="mt-3">
           <% @programs.each do |program|%>
-          <h4>番組情報</h4>
-          <p>番組名：<%= program[:title] %></p><br>
-          <p>出演者情報：<%= program[:cast] %></p><br>
-          <p>放送時間：<%= program[:date] %></p><br>
-          <p>局：<%= program[:channel] %></p><br>
+          <h4>番組情報</h4><br>
+          <h5>番組名：<%= program[:title] %></h5><br>
+          <p>サブタイトル：<%= program[:second_title] %></p><br>
+          <p>放送カテゴリー：<%= program[:category] %></p><br>
+          <p>出演者情報1：<%= program[:cast1] %></p><br>
+          <p>出演者情報2：<%= program[:cast2] %></p><br>
+          <p>出演者情報3：<%= program[:cast3] %></p><br>
+          <p>放送局：<%= program[:channel] %></p><br>
+          <p>放送日時：<%= program[:date] %>  <%=program[:by_weekday] %>曜日 <%= program[:start_time]%>〜<%= program[:end_time]%></p><br>
+
           <% end %>
         </div>
     </div>
