--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html>
   <head>
     <title>Audience</title>
+    <meta charset="utf-8" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <script src="https://kit.fontawesome.com/c5c1bb451e.js" crossorigin="anonymous"></script>
