--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-9">
       <div class="mt-3">
         <h4 class="">番組一覧</h4>
-        <% @programs.each do |program|%>
+        <% @programs.each do |program| %>
         <h5><%= program[:title] %>の概要</h5>
           <table class="table">
             <tr>
@@ -27,7 +27,9 @@
             </tr>
             <tr>
               <th>放送日時</th>
-              <th><%= program[:date] %>　 <%= program[:by_weekday] %>曜日　<%= program[:start_time] %>〜<%= program[:end_time] %></th>
+              <% weeks = ["月","火","水","木","金","土","日"] %>
+              <% index = program[:start_datetime].strftime("%u").to_i %>
+              <th><%= program[:start_datetime].strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program[:end_datetime].strftime("%-H:%M") %></th>
             </tr>
           </table><br><br>
           <% end %>
