[Update]program_save

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <li><%= link_to "トップ", root_path %></li>
             <li><%= link_to "アバウト", about_path %></li>
             <li><%= link_to "仮program index", admins_programs_path %></li>
-            <li><%= link_to "仮番組取得画面", new_admins_program_path %></li>
+            <li><%= link_to "仮番組取得画面", admins_scrape_path %></li>
           <% end %>
         </ul>
       </nav>
