--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -2,6 +2,9 @@
   <div class="row mt-4">
     <div class="col-9">
         <h4 class="text-center">top page</h4>
+        <div>
+          <%= link_to '番組情報を取得する', admins_scrape_path %>
+        </div>
     </div>
     <div class="col-3">
         <p>検索フォーム</p>
