--- a/app/views/admins/programs/index.html.erb
+++ b/app/views/admins/programs/index.html.erb
@@ -1,41 +1,17 @@
 <div class="conteiner m-5">
   <div class="row mt-4">
+    <div class="col-3">
+      <div class="btn btn-outline-info">番組一覧を表示する</div><br>
+      <%= link_to '番組情報を更新する', admins_scrape_path, class: 'btn btn-outline-danger' %>
+      <%#= link_to "番組情報を取得する", '#', id: 'display-program-list' %>
+      <%#= link_to "番組情報を取得する", admins_scrape_path, remote: true, id: 'get-data', style: 'display:none;' %>
+    </div>
     <div class="col-9">
-      <div class="mt-3">
-        <h4 class="">番組一覧</h4>
-        <% @programs.each do |program| %>
-        <h5><%= program[:title] %>の概要</h5>
-          <table class="table">
-            <tr>
-              <th class="col-4">番組名</th>
-              <th><%= program[:title] %></th>
-            </tr>
-            <tr>
-              <th>サブタイトル</th>
-              <th><%= program[:second_title] %></th>
-            </tr>
-            <tr>
-              <th>放送カテゴリー</th>
-              <th><%= program[:category] %></th>
-            </tr>
-            <tr>
-              <th>出演者情報</th>
-              <th><%= program[:cast] %></th>
-            </tr>
-            <th>放送局</th>
-              <th><%= program[:channel] %></th>
-            </tr>
-            <tr>
-              <th>放送日時</th>
-              <% weeks = ["月","火","水","木","金","土","日"] %>
-              <% index = program[:start_datetime].strftime("%u").to_i %>
-              <th><%= program[:start_datetime].strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program[:end_datetime].strftime("%-H:%M") %></th>
-            </tr>
-          </table><br><br>
-          <% end %>
-         </div>
+      <h4 class="">番組一覧</h4>
+      <strong>😲<%= @time.strftime("%-H:%M") %>の情報です</strong>
+      <div id="programs_area">
+        <%= render partial: 'admins/programs/information', locals: { programs: @programs } %>
       </div>
-      <div class="col-3">
-      </div>
+    </div>
   </div>
 </div>
