--- a/app/views/admins/programs/new.html.erb
+++ b/app/views/admins/programs/new.html.erb
@@ -2,42 +2,11 @@
   <div class="row mt-4">
     <div class="col-9">
       <div class="mt-3">
-        <h4 class="">番組一覧</h4>
-        <%# binding.pry %>
-        <% @programs.each do |program| %>
-        <h5><%= program[:title] %>の概要</h5>
-          <table class="table">
-            <tr>
-              <th class="col-4">番組名</th>
-              <th><%= program[:title] %></th>
-            </tr>
-            <tr>
-              <th>サブタイトル</th>
-              <th><%= program[:second_title] %></th>
-            </tr>
-            <tr>
-              <th>放送カテゴリー</th>
-              <th><%= program[:category] %></th>
-            </tr>
-            <tr>
-              <th>出演者情報</th>
-              <th><%= program[:cast] %></th>
-            </tr>
-            <th>放送局</th>
-              <th><%= program[:channel] %></th>
-            </tr>
-            <tr>
-              <th>放送日時</th>
-              <% weeks = ["月","火","水","木","金","土","日"] %>
-              <% index = program[:start_datetime].strftime("%u").to_i %>
-              <th><%= program[:start_datetime].strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %> 〜 <%= program[:end_datetime].strftime("%-H:%M") %></th>
-            </tr>
-          </table><br><br>
-          <% end %>
-         </div>
+        <h4>admin::programs#new</h4>
+      </div>
       </div>
       <div class="col-3">
-        <%= link_to "番組情報を取得する", new_admins_program_path("program") %>
+        <%#= link_to "番組情報を取得する", admins_sprape_do_path %>
       </div>
   </div>
 </div>
