--- a/app/views/members/registrations/new.html.erb
+++ b/app/views/members/registrations/new.html.erb
@@ -46,14 +46,14 @@
       </div>
     </div>
 
-      <!--<div class="form-group row">-->
-      <!--<div class="col-md-3 d-flex align-items-center">-->
-        <%#= f.label "性別", class: "form-group-label" %>
-      <!--</div>-->
-      <!--<div class="col-md-7">-->
-        <%#= f.select :gender, Member.genders.keys, class: "form-control" %>
-    <!--  </div>-->
-    <!--</div>-->
+      <div class="form-group row">
+      <div class="col-md-3 d-flex align-items-center">
+        <%= f.label "性別", class: "form-group-label" %>
+      </div>
+      <div class="col-md-7">
+        <%= f.select :gender, Member.genders.keys, class: "form-control,required='required'" %>
+      </div>
+    </div>
 
       <div class="form-group row">
       <div class="col-md-3 d-flex align-items-center">
