--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -18,10 +18,11 @@
           <tr>
             <th>ステータス</th>
             <th>
+              <!--trueなら有効、falseなら退会-->
               <% if member.is_valid == false %>
-                <div class="text-success align-middle">有効</div>
+                <div class="text-success align-middle">退会</div>
               <% else %>
-                <div class="text-secondary aline-middle">退会</div>
+                <div class="text-secondary aline-middle">有効</div>
               <% end %>
             </td>
             </th>
