--- a/app/views/admins/members/edit.html.erb
+++ b/app/views/admins/members/edit.html.erb
@@ -1,12 +1,11 @@
 <div class="container m-5">
   <div class="row justify-content-center">
-    <div class="col-2">
+    <div class="col-3">
       <%= link_to "会員詳細へ戻る", admins_member_path(@member), method: :put, class: "btn btn-info" %>
     </div>
-    <div class="col-10 mx-auto">
+    <div class="col-9 mx-auto">
       <h4> 会員情報更新 </h4>
-      <%= form_with model: @member, local: true, method: :put do |f| %>
-      <%#= form_with model: @member, url: admins_member_path, local: true, method: :put do |f| %>
+      <%= form_with model: @member, url: admins_member_path(@member), local: true, method: :put do |f| %>
       <div class="form-group row">
         <div class="col-md-3">
           <%= f.label  "氏名（姓・名）", class: "col-from-label" %>
@@ -76,11 +75,11 @@
       </div>
 
       <div class="form-group row">
-        <div class="col-md-3 d-flex align-items-center">
-          <%= attachment_image_tag current_member, :profile_image, format: 'png', fallback: "img/noimage1.png", size: "100x100"%>
+        <div class="col-md-3">
           <%= f.label "プロフィールイメージ", class: "form-group-label" %>
+          <%= attachment_image_tag current_member, :profile_image, format: 'png', fallback: "img/noimage1.png", size: "100x100"%>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-7 d-flex align-items-center">
           <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
         </div>
       </div>
@@ -89,19 +88,13 @@
         <div class="col-md-3 d-flex align-items-center">
           <%= f.label "ステータス", class: "form-group-label" %>
         </div>
-        <div class="col-md-7">
-          <%= f.text_field :prefecture, autofocus: true, autocomplete: "prefecture", class: "form-control" %>
-        </div>
-      </div>
-
-      <div class="form-group row">
         <div>
-          <%= f.radio_button :is_valid, true %>
-          <%= f.label :is_valid, '退会済み', value: true, class: "form-group-label" %>
+          <%= f.radio_button :is_valid, '退会済' %>
+          <%= f.label :is_valid, '退会済み', value: '退会済', class: "form-group-label" %>
         </div>
         <div>
-          <%= f.radio_button :is_valid, false %>
-          <%= f.label :is_valid, '有効', value: false, class: "form-group-label" %>
+          <%= f.radio_button :is_valid, '有効' %>
+          <%= f.label :is_valid, '有効', value: '有効', class: "form-group-label" %>
         </div>
       </div>
 
