--- a/app/views/admins/programs/show.html.erb
+++ b/app/views/admins/programs/show.html.erb
@@ -1,16 +1,13 @@
 <div class="conteiner m-5">
   <div class="row mt-4">
     <div class="col-3">
-      <%= link_to '番組情報を更新する', class: 'btn btn-outline-danger' %>
-      <%#= link_to "番組情報を取得する", '#', id: 'display-program-list' %>
-      <%#= link_to "番組情報を取得する", admins_scrape_path, remote: true, id: 'get-data', style: 'display:none;' %>
+      <%= link_to '番組情報を編集する', edit_admins_program_path(@program), class: 'btn btn-outline-info' %>
+      <%= link_to '番組情報を削除する', admins_program_path(@program), method: :delete, class: 'btn btn-outline-secondary' %>
     </div>
     <div class="col-9">
       <h4 class="">番組詳細</h4>
       <strong>😲<%= @time.strftime("%-H:%M") %>の情報です</strong>
-      <div id="programs_area">
-        <%= render partial: 'layouts/information', locals: { programs: @program } %>
-      </div>
+        <%= render partial: 'layouts/information', locals: { program: @program } %>
       <%= link_to "Back", admins_programs_path, class: "btn btn-sm btn-danger" %>
     </div>
   </div>
