--- a/app/views/members/programs/show.html.erb
+++ b/app/views/members/programs/show.html.erb
@@ -1,18 +1,25 @@
 <div class="conteiner m-5">
   <div class="row mt-4">
-    
+
     <div class="col-9">
       <h4 class="">番組詳細</h4>
       <strong>😲<%= @time.strftime("%-H:%M") %>の情報です</strong>
       <div id="programs_area">
         <%= render partial: 'layouts/information', locals: { program: @program } %>
       </div>
+
       <div id="favorite_buttons_<%= @program.id %>">
-        <%= render partial: 'members/programs/favorite', locals: { program: @program, member: @member } %>
+        <%= render partial: 'members/favorites/favorite', locals: { program: @program, member: @member } %>
       </div>
+      
+      <!--レビュー一覧-->
+      <%= render partial: 'members/reviews/show_review', locals: { program: @program, member: @member } %>
+      <!--レビュー新規投稿-->
+      <%= render partial: 'members/reviews/new_review', locals: { program: @program, review: @review } %>
+
       <%= link_to "Back", programs_path, class: "btn btn-sm btn-danger" %>
     </div>
-    
+
     <div class="col-3">
     </div>
   </div>
