--- a/app/views/members/reviews/_new_review.html.erb
+++ b/app/views/members/reviews/_new_review.html.erb
@@ -1,5 +1,5 @@
 <div class="new-review">
-<%= form_with(model:[program, review], local: true) do |f| %>
+<%= form_with(model:[program, review], remote: true) do |f| %>
 
 <!-- 星評価 -->
   <div class="form-group row" id="star">
