--- a/app/views/members/reviews/_show_review.html.erb
+++ b/app/views/members/reviews/_show_review.html.erb
@@ -1,7 +1,7 @@
 <div class="reviews">
-  <p>コメント件数：<%= program.review.count %></p>
-  <% if program.review.present? %>
-    <% program.review.each do |review| %>
+  <p>コメント件数：<%= reviews.count %></p>
+  <% if reviews.present? %>
+    <% reviews.each do |review| %>
     <div class="row review">
 
       <div class="col-md-4 review-member">
@@ -42,7 +42,7 @@
       <div class="col-md-12">
         <% if review.member == current_member %>
         <div class="review-delete">
-          <%= link_to "削除", program_review_path(review.program, review), method: :delete %>
+          <%= link_to "削除", program_review_path(review.program, review), method: :delete, remote: true %>
         </div>
         <div class="review-delete">
           <%= link_to "編集", edit_program_review_path(review.program, review) %>
