--- a/app/views/members/programs/index.html.erb
+++ b/app/views/members/programs/index.html.erb
@@ -38,7 +38,7 @@
               <%= program.start_datetime.strftime("%Y年%m月%d日(#{weeks[index - 1]}) %-H:%M") %>
             </th>
             <th>
-              <%= render partial: 'members/favorites/favorite', locals: { program: program, member: @member } %>
+              <%#= render partial: 'members/favorites/favorite', locals: { program: program, member: @member } %>
             </th>
             <th>
               <%= program.review.count %>
