--- a/app/views/members/programs/index.html.erb
+++ b/app/views/members/programs/index.html.erb
@@ -50,6 +50,7 @@
       <%= paginate @programs %>
     </div>
     <div class="col-3">
+      <%= render partial: 'members/programs/search_form', locals: { program: @program } %>
     </div>
   </div>
 </div>
