--- a/app/views/layouts/_information.html.erb
+++ b/app/views/layouts/_information.html.erb
@@ -1,4 +1,14 @@
-<h5><%= program.title %>の概要</h5>
+<div class="row">
+  <div class="col-3">
+    <%= attachment_image_tag program, :program_image, fallback: "img/noimage1.png", size: "100x100"%>
+    <%= attachment_image_tag program, :program_image %>
+  </div>
+  <div class="col-9">
+    <div class="mt-3">
+      <h5><%= program.title %>の概要</h5>
+    </div>
+  </div>
+</div>
 <table class="table program">
   <tr>
     <th>放送状況</th>
